--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<s.practice.imageselect.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent">
 
     <ImageView
-        android:scaleType="center"
+        android:background="@color/colorAccent"
+        android:scaleType="centerCrop"
         android:id="@+id/iv_image_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -15,4 +17,4 @@
         android:layout_gravity="top|right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-</SquareFrameLayout>
+</s.practice.imageselect.SquareFrameLayout>
