--- a/app/src/main/res/layout/fragment_preview_item.xml
+++ b/app/src/main/res/layout/fragment_preview_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -17,6 +17,7 @@
         android:layout_margin="10dp" />
 
     <TextView
+        android:textColor="@color/white"
         android:id="@+id/tv_preview_viewpager_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,4 +25,4 @@
         android:layout_margin="10dp"
         android:text="删除"
         android:textSize="15sp" />
-</LinearLayout>
+</FrameLayout>
