--- a/app/src/main/res/layout/activity_myreceipt_preview.xml
+++ b/app/src/main/res/layout/activity_myreceipt_preview.xml
@@ -3,13 +3,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <s.practice.imageselect.PreviewViewpager
+
         android:id="@+id/preview_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black">
     </s.practice.imageselect.PreviewViewpager>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom"
+        android:alpha="0.5"
+        android:background="@color/black">
 
+        <TextView
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:text="@string/delete"
+            android:textColor="@color/white" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_gravity="top"
+        android:alpha="0.5"
+        android:background="@color/black">
+
+        <TextView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:text="@string/back"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/click"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:text="@string/click"
+            android:textColor="@color/white" />
+    </RelativeLayout>
 
 </FrameLayout>
